@@ -17,7 +17,6 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import io.opentelemetry.sdk.common.CompletableResultCode;
 import io.opentelemetry.sdk.trace.data.SpanData;
@@ -59,7 +58,7 @@ final class InMemorySpanExporter implements SpanExporter {
         synchronized (this) {
             return exported.stream()
                     .sorted(Comparator.comparing(SpanData::getStartEpochNanos))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 }
